force-app/main/default/objects/Ethics_Request__c/Ethics_Request__c.object-meta.xml
<CustomObject>
    <label>Ethics Request</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ethics Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>