force-app/main/default/objects/Ethics_Request__c/fields/AEC_Ethics_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>AEC_Ethics_Application_Type__c</fullName>
    <label>AEC Ethics Application Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The understanding of human or animal biology</fullName>
            </value>
            <value>
                <fullName>Maintenance and improvement of human or animal health and welfare</fullName>
            </value>
            <value>
                <fullName>Improvement of animal management or production</fullName>
            </value>
            <value>
                <fullName>The achievement of educational objectives</fullName>
            </value>
            <value>
                <fullName>Obtain &amp; establish significant information relevant to the understanding, maintenance or improvement of the natural environment.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>