force-app/main/default/objects/Ethics_Request__c/fields/Approving_Ethics_Committee_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approving_Ethics_Committee_Approval_Date__c</fullName>
    <label>Approving Ethics Committee Approval Date</label>
    <type>Date</type>
</CustomField>