force-app/main/default/objects/Ethics_Request__c/fields/Attached_File_Names__c.field-meta.xml
<CustomField>
    <fullName>Attached_File_Names__c</fullName>
    <label>Related File Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>