force-app/main/default/objects/Ethics_Request__c/fields/Conditions_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Conditions_of_Approval__c</fullName>
    <label>Conditions of Approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>