force-app/main/default/objects/Ethics_Request__c/fields/Content_Owner__c.field-meta.xml
<CustomField>
    <fullName>Content_Owner__c</fullName>
    <label>Content Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>