force-app/main/default/objects/Ethics_Request__c/fields/Count_of_Parent_Ethics_Human__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Parent_Ethics_Human__c</fullName>
    <label>Count of Parent Ethics Human</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>