force-app/main/default/objects/Ethics_Request__c/fields/Count_of_Parent_Ethics_IBC__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Parent_Ethics_IBC__c</fullName>
    <label>Count of Parent Ethics IBC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>