force-app/main/default/objects/Ethics_Request__c/fields/Count_of_Related_Ethics_Applications__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Related_Ethics_Applications__c</fullName>
    <label>Count of Related Ethics Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>