force-app/main/default/objects/Ethics_Request__c/fields/CTN__c.field-meta.xml
<CustomField>
    <fullName>CTN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTN</label>
    <type>Checkbox</type>
</CustomField>