force-app/main/default/objects/Ethics_Request__c/fields/CTX__c.field-meta.xml
<CustomField>
    <fullName>CTX__c</fullName>
    <label>CTX</label>
    <type>Date</type>
</CustomField>