force-app/main/default/objects/Ethics_Request__c/fields/Data_and_Privacy__c.field-meta.xml
<CustomField>
    <fullName>Data_and_Privacy__c</fullName>
    <label>Data and Privacy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Data</fullName>
            </value>
            <value>
                <fullName>Health Data</fullName>
            </value>
            <value>
                <fullName>Sensitive Data</fullName>
            </value>
            <value>
                <fullName>EU Data Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>