force-app/main/default/objects/Ethics_Request__c/fields/DNIR_DIR_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>DNIR_DIR_Licence_Number__c</fullName>
    <label>DNIR/DIR Licence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>