force-app/main/default/objects/Ethics_Request__c/fields/Document_Author__c.field-meta.xml
<CustomField>
    <fullName>Document_Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ethics Requests (Document Author)</relationshipLabel>
    <relationshipName>Ethics_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>