force-app/main/default/objects/Ethics_Request__c/fields/Document_Version__c.field-meta.xml
<CustomField>
    <fullName>Document_Version__c</fullName>
    <label>Document Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>