force-app/main/default/objects/Ethics_Request__c/fields/Dosage_Description_of_Drug_Device__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Description_of_Drug_Device__c</fullName>
    <label>Dosage/Description of Drug/Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>