force-app/main/default/objects/Ethics_Request__c/fields/Ethics_Application_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Application_Expiry_Date__c</fullName>
    <label>Ethics Application Expiry Date</label>
    <type>Date</type>
</CustomField>