force-app/main/default/objects/Ethics_Request__c/fields/Ethics_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Application_Number__c</fullName>
    <label>Ethics Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>