force-app/main/default/objects/Ethics_Request__c/fields/Ethics_Application_Review_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Application_Review_Outcomes__c</fullName>
    <label>Ethics Application Review Outcomes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Ready for Committee Review</fullName>
            </value>
            <value>
                <fullName>Subject to</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Outcome Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Closed-off</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Noted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>