force-app/main/default/objects/Ethics_Request__c/fields/Ethics_Application_Title__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Application_Title__c</fullName>
    <label>Ethics Application Title</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>