force-app/main/default/objects/Ethics_Request__c/fields/Ethics_Review_Committee__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Review_Committee__c</fullName>
    <label>Ethics Review Committee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human Research Ethics Committee (HREC)</fullName>
            </value>
            <value>
                <fullName>Animal Ethics Committee</fullName>
            </value>
            <value>
                <fullName>My Uni Institutional Biosafety Committee</fullName>
            </value>
            <value>
                <fullName>Low Risk Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>