force-app/main/default/objects/Ethics_Request__c/fields/EU_Data_Collection__c.field-meta.xml
<CustomField>
    <fullName>EU_Data_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EU Data Collection</label>
    <type>Checkbox</type>
</CustomField>