force-app/main/default/objects/Ethics_Request__c/fields/Governance_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Governance_Approval_Date__c</fullName>
    <label>Governance Approval Date</label>
    <type>Date</type>
</CustomField>