force-app/main/default/objects/Ethics_Request__c/fields/Health_Data__c.field-meta.xml
<CustomField>
    <fullName>Health_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Data</label>
    <type>Checkbox</type>
</CustomField>