force-app/main/default/objects/Ethics_Request__c/fields/IBC_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>IBC_Application_Type__c</fullName>
    <label>IBC Application Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PC1</fullName>
            </value>
            <value>
                <fullName>PC2</fullName>
            </value>
            <value>
                <fullName>PC3</fullName>
            </value>
            <value>
                <fullName>DNIR Licence Number</fullName>
            </value>
            <value>
                <fullName>DIR Licence Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>