force-app/main/default/objects/Ethics_Request__c/fields/IBC_Review_Committee__c.field-meta.xml
<CustomField>
    <fullName>IBC_Review_Committee__c</fullName>
    <label>IBC Review Committee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My Uni IBC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>