force-app/main/default/objects/Ethics_Request__c/fields/Invasive_Nature_of_Trial__c.field-meta.xml
<CustomField>
    <fullName>Invasive_Nature_of_Trial__c</fullName>
    <label>Invasive Nature of Trial</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>