force-app/main/default/objects/Ethics_Request__c/fields/Meeting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Comments__c</fullName>
    <label>Actions for researchers</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>