force-app/main/default/objects/Ethics_Request__c/fields/Name_of_Drug_Device__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Drug_Device__c</fullName>
    <label>Name of Drug/Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>