force-app/main/default/objects/Ethics_Request__c/fields/Non_drug_Clinical_Trial__c.field-meta.xml
<CustomField>
    <fullName>Non_drug_Clinical_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-drug Clinical Trial</label>
    <type>Checkbox</type>
</CustomField>