force-app/main/default/objects/Ethics_Request__c/fields/Number_of_Review_Times__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Review_Times__c</fullName>
    <label>Number of Review Times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>