force-app/main/default/objects/Ethics_Request__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ethics Requests (Organisation)</relationshipLabel>
    <relationshipName>Ethics_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>