force-app/main/default/objects/Ethics_Request__c/fields/Personal_Data__c.field-meta.xml
<CustomField>
    <fullName>Personal_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Data</label>
    <type>Checkbox</type>
</CustomField>