force-app/main/default/objects/Ethics_Request__c/fields/Principal_Investigator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Investigator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ethics Requests (Principle Investigator)</relationshipLabel>
    <relationshipName>Ethics_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>