force-app/main/default/objects/Ethics_Request__c/fields/Principal_Investigator_Count__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator_Count__c</fullName>
    <label>Principal Investigator Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>