force-app/main/default/objects/Ethics_Request__c/fields/Ratified__c.field-meta.xml
<CustomField>
    <fullName>Ratified__c</fullName>
    <label>Ratified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>To Be Ratified</fullName>
            </value>
            <value>
                <fullName>Ratified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>