force-app/main/default/objects/Ethics_Request__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ethics Requests (Requestor)</relationshipLabel>
    <relationshipName>Ethics_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>