force-app/main/default/objects/Ethics_Request__c/fields/Revision_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Due_Date__c</fullName>
    <label>Revision Due Date</label>
    <type>Date</type>
</CustomField>