force-app/main/default/objects/Ethics_Request__c/fields/Site_where_Research_is_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Site_where_Research_is_Conducted__c</fullName>
    <label>Site where Research is Conducted</label>
    <type>TextArea</type>
</CustomField>