force-app/main/default/objects/Ethics_Request__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ethics Requests (Sponsor)</relationshipLabel>
    <relationshipName>Ethics_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>