force-app/main/default/objects/Ethics_Request__c/fields/Sponsor_Type__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Type__c</fullName>
    <label>Sponsor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projects Sponsored by My Uni</fullName>
            </value>
            <value>
                <fullName>Projects Sponsored by another organisation</fullName>
            </value>
            <value>
                <fullName>Commercial/Industry Sponsored projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>