force-app/main/default/objects/Ethics_Request__c/fields/Target_Participant_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Target_Participant_Numbers__c</fullName>
    <label>Target Participant Numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>