force-app/main/default/objects/Ethics_Request__c/fields/Tasks_with_Milestone_Status_Yellow__c.field-meta.xml
<CustomField>
    <fullName>Tasks_with_Milestone_Status_Yellow__c</fullName>
    <label>Tasks with Milestone Status Yellow</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>