force-app/main/default/objects/Ethics_Request__c/fields/Time_To_Approval__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Approval__c</fullName>
    <label>Time To Decision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>