force-app/main/default/objects/Ethics_Request__c/fields/Topic_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Topic_Subject_Line__c</fullName>
    <label>Topic/Subject Line</label>
    <type>TextArea</type>
</CustomField>