force-app/main/default/objects/Ethics_Request__c/fields/Trial_Description__c.field-meta.xml
<CustomField>
    <fullName>Trial_Description__c</fullName>
    <label>Trial Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>