force-app/main/default/objects/Ethics_Request__c/fields/Trim_Link__c.field-meta.xml
<CustomField>
    <fullName>Trim_Link__c</fullName>
    <label>Trim Link</label>
    <type>Url</type>
</CustomField>