force-app/main/default/objects/Ethics_Request__c/fields/Waiver_of_Consent__c.field-meta.xml
<CustomField>
    <fullName>Waiver_of_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiver of Consent</label>
    <type>Checkbox</type>
</CustomField>