force-app/main/default/objects/Ethics_Request__c/fields/Waiver_of_Consent_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Waiver_of_Consent_Reasons__c</fullName>
    <label>Waiver of Consent Reasons</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>