force-app/main/default/objects/Ethics_Request__c/fields/With_Researcher_Date__c.field-meta.xml
<CustomField>
    <fullName>With_Researcher_Date__c</fullName>
    <label>With Researcher Date</label>
    <type>Date</type>
</CustomField>